# AI-Engineering-Lab

./: .gitignore  1_test_response.py  3_custom_client.py  4_rest_api.py  5_package_chat.py  7_chat_stream_with_history.py  8_chat_using_modelfile.py  demo_tinyllama.py  main.py  pyproject.toml
11_SE_principles_Py/: Readme_SE_Py.md
12_LangChain/: ReadMe_LangChain.md  l1_intro_chatbot_mechanics.py  l2_chains_and_agents.py  l3_RAG.py
1_OpenAI_API/: l1_1st_openai_api_request.py  l2_prompting_models.py  l3_roles_system_messages.py
2_PromptEng_OpenAI_API/: Readme_PrEng.md  l1_intro_PrEng.py
4_HuggingFace/: ReadMe_HF.md  l1_intro_HF.py  l2_pipelines_HF.py
ollama-python/: 2_test_stream.py  6_chat_with_history.py  7_chat_stream_with_history.py  Modelfile  main.py  pyproject.toml
