[project]
name = "ai-engineering-lab"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=7.1.0",
    "langchain>=1.0.5",
    "langchain-openai>=1.0.2",
    "openai>=2.7.1",
    "pydantic-settings>=2.11.0",
    "python-dotenv>=1.2.1",
]
