[project]
name = "ai-engineering-lab"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "datasets>=4.4.1",
    "ipykernel>=7.1.0",
    "langchain>=1.0.5",
    "langchain-chroma>=1.0.0",
    "langchain-community>=0.4.1",
    "langchain-huggingface>=1.0.1",
    "langchain-openai>=1.0.2",
    "openai>=2.7.1",
    "pandas>=2.3.3",
    "pydantic-settings>=2.11.0",
    "pypdf>=6.1.3",
    "python-dotenv>=1.2.1",
    "torch>=2.9.0",
    "transformers>=4.57.1",
    "unstructured>=0.18.18",
    "wikipedia>=1.4.0",
]
